protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_file-13.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    File {
        span: 0..24,
        syntax: Proto3,
        syntax_span: Some(
            (
                0..24,
                Comments {
                    leading_detached_comments: [],
                    leading_comment: None,
                    trailing_comment: None,
                },
            ),
        ),
        package: None,
        imports: [],
        options: [],
        items: [],
    },
)
