protox-parse/src/parse/snapshots/protox_parse__parse__tests__parse_import.snap
---
source: src/parse/tests.rs
expression: "if parser.lexer.extras.errors.is_empty() {\n        Ok(result.unwrap())\n    } else { Err(parser.lexer.extras.errors) }"
---
Ok(
    Import {
        kind: None,
        value: "foo",
        value_span: 7..12,
        comments: Comments {
            leading_detached_comments: [],
            leading_comment: None,
            trailing_comment: None,
        },
        span: 0..13,
    },
)
